# esp_now_lvgl_monitor

./: README.md  SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
assets/: ui_font_Font1.fcfg
esp_master/: CMakeLists.txt  esp_master.ino  filelist.txt  ui.c  ui.h  ui_ekran.c  ui_events.c  ui_events.h  ui_font_Font1.c  ui_img_1257822616.c  ui_img_1536731275.c  ui_img_1760234689.c  ui_img_1895508086.c  ui_img_212523610.c  ui_img_2137509695.c  ui_img_432815713.c  ui_img_5528042.c  ui_img_781912046.c  ui_img_84851999.c  ui_img_bell_png.c  ui_img_humidity_png.c  ui_img_restart_png.c  ui_img_synchronize_png.c  ui_img_temperature_png.c
esp_slave/: esp_slave.ino
