SET(SOURCES ui_ekran.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_212523610.c
    ui_img_5528042.c
    ui_img_1895508086.c
    ui_img_bell_png.c
    ui_img_2137509695.c
    ui_img_781912046.c
    ui_img_synchronize_png.c
    ui_img_1760234689.c
    fonts/ui_font_Font1.c)

add_library(ui ${SOURCES})
